cmake_minimum_required(VERSION 3.10)
project(mvp_mission)

add_subdirectory(mvp_helm)
add_subdirectory(behavior_interface)
add_subdirectory(bhv_path_following)
add_subdirectory(bhv_motion_evaluation)
add_subdirectory(bhv_periodic_surface)
add_subdirectory(bhv_template)
add_subdirectory(bhv_depth_tracking)
add_subdirectory(bhv_teleoperation)