<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_interface</name>
  <version>0.0.0</version>
  <description>behavior_interface description</description>
  <maintainer email="mingxi@todo.todo">mingxi</maintainer>
  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>mvp_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>