<?xml version="1.0"?>
<package format="2">
  <name>bhv_altitude_tracking</name>
  <version>0.0.0</version>
  <description>The bhv_altitude_tracking package</description>

  <maintainer email="mzhou@uri.edu">Mingxi Zhou</maintainer>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>behavior_interface</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
    


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <behavior_interface plugin="${prefix}/behavior.xml" />
  </export>
</package>
