<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bhv_altitude_tracking</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="mzhou@uri.edu">Mingxi Zhou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>mvp_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>behavior_interface</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>behavior_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <behavior_interface plugin="${prefix}/behavior_plugin.xml" />
  </export>
</package>
